--- a/src/main.css
+++ b/src/main.css
@@ -17,6 +17,40 @@
     border:1px solid #e6e6e6;
 }
 
+.posts{
+    margin-top: 5px;
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+.posts-row{
+    display:flex;
+    background-color: whitesmoke;
+    flex-flow: row nowrap;
+    justify-content: center;
+}
+
+.posts-child{
+    max-width: 280px;
+    max-height: 280px;
+    border: 1px solid #f6f6f6;
+    width: 30vw;
+    height: 30vw;
+    min-width: 90px;
+    min-height: 90px;
+
+    background-color: white;
+    flex-basis: 1;
+    overflow: hidden;
+    position: relative;
+}
+
+.posts-child img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 @media(max-height: 500px){
     .container-fluid.full-vph{
         height: 100%;
