--- a/src/main.css
+++ b/src/main.css
@@ -51,6 +51,23 @@
     object-fit: cover;
 }
 
+.posts-child img:hover {
+    opacity: 0.5;
+}
+
+.post-tag{
+    float: left;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: 2;
+    background-color: #92AD40;
+    padding: 5px;
+    color: #FFFFFF;
+    font-weight: bold;
+    font-size: 2.5vh;
+}
+
 @media(max-height: 500px){
     .container-fluid.full-vph{
         height: 100%;
